# dds

./: .gitignore  CMakeLists.txt  README.md  ReSharper.DotSettings
src/: CMakeLists.txt  dds_main_window.cpp  dds_main_window.h  dds_main_window.ui  dia_data_source.cpp  dia_data_source.h  dia_dump.cpp  dia_dump.h  dia_interfaces.cpp  dia_interfaces.h  dia_load_callback.h  dia_session.cpp  dia_session.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
src/dia/: dia_data_source.cpp  dia_data_source.h  dia_interfaces.h
